# ros2_ws

./: .CLAUDE_CONTEXT.md.swp  .gitignore  CLAUDE.md  CLAUDE_CONTEXT.md  CONTEXT.md  README.md  height_bias.py  install_usb_camera_names.sh  plant_control_1780318444411478977.csv  plant_control_1780318503385879775.csv  plant_control_1780736916568746904.csv  plant_control_1780737266311414838.csv  plant_control_1780737594908008768.csv  plant_control_1780737843912349049.csv  plant_control_1780738059184495491.csv  plant_control_1780738462333165952.csv  test_yolo.py  usb-camera-names.rules
.claude/: settings.local.json
.claude/commands/: push-remote.md
activity_control_pkg/: CMakeLists.txt  package.xml
activity_control_pkg/include/activity_control_pkg/core/: image_cache.hpp  sensor_cache.hpp  waypoint_navigator.hpp
activity_control_pkg/scripts/diansai_first/: alignment_check_support.py
activity_control_pkg/src/core/: aux_controller.cpp  waypoint_navigator.cpp
activity_control_pkg/src/tasks/: fixed_waypoint_task_node.cpp  side_camera_viewer_node.cpp
activity_control_pkg/src/tasks/diansai_first/: diansai_first_task_node.cpp
animal_yolov5s_best_verified_deploy/: README.md  SHA256SUMS.txt  classes.txt  rknn_validation_report.json
bags/d_task_20260606_193256/: d_task_20260606_193256_0.db3  metadata.yaml
bags/d_task_20260606_193355/: metadata.yaml
bluesea2/src/bluesea-ros2/params/: uart_lidar.yaml
circle_detector/circle_detector_pkg/: circle_detector_node.py
circle_detector/launch/: circle_detector_pkg.launch.py
docs/: d_task_ground_station_interface.md  mission_framework_plan.md  remote-dev.md  wildlife_patrol_interface.md
my_launch/: setup.py
my_launch/launch/: diansai_first.launch.py  diansai_first_alignment_check.launch.py  fixed_waypoint.launch.py  rknn_yolo_camera.launch.py  warehouse_inventory.launch.py
pid_control_pkg/launch/: position_pid_controller.launch.py
pid_control_pkg/src/: pid_controller.cpp
rknn_yolo_detector_pkg/: package.xml
rknn_yolo_detector_pkg/launch/: rknn_yolo_detector.launch.py
rknn_yolo_detector_pkg/rknn_yolo_detector_pkg/: rknn_yolo_detector_node.py  yolov5_postprocess.py
rknn_yolo_detector_pkg/test/: test_yolov5_postprocess.py
scripts/: .remote.env.example.swp  d_task_play.sh  d_task_record.sh  push-remote.sh  remote-build.sh  remote-common.sh  remote-run.sh  remote-shell.sh  remote.env.example  rsync-from-remote.sh  rsync-to-remote.sh  start_warehouse_inventory.sh  start_wildlife_patrol.sh
src/: README.md
src/activity_control_pkg/: CMakeLists.txt  package.xml
src/activity_control_pkg/include/activity_control_pkg/core/: aux_controller.hpp  waypoint_navigator.hpp
src/activity_control_pkg/scripts/diansai_first/: alignment_check_support.py  relay_http_bridge.py
src/activity_control_pkg/src/core/: aux_controller.cpp  image_cache.cpp  sensor_cache.cpp  waypoint_navigator.cpp
src/activity_control_pkg/src/tasks/: barcode_reader_node.cpp  plant_protection_task_node.cpp  side_camera_viewer_node.cpp  warehouse_inventory_task_node.cpp  wildlife_patrol_task_node.cpp
src/activity_control_pkg/src/tasks/diansai_first/: diansai_first_task_node.cpp
src/board_test/: batch_infer.py
src/circle_detector/circle_detector_pkg/: detector_core.py
src/laser_array_pkg/launch/: laser_array_ground.launch.py
src/laser_array_pkg/src/: laser_array_ground_node.cpp
src/my_launch/: package.xml  setup.py
src/my_launch/launch/: README.md  diansai_first.launch.py  diansai_first_alignment_check.launch.py  fixed_waypoint.launch.py  plant_protection.launch.py  rknn_yolo_camera.launch.py  side_camera_debug.launch.py  warehouse_inventory.launch.py  wildlife_patrol.launch.py
src/my_launch/my_launch/: analyze_plant_tuning.py
src/pid_control_pkg/include/pid_control_pkg/: pid_controller.hpp
src/pid_control_pkg/launch/: position_pid_controller.launch.py
src/pid_control_pkg/src/: pid_controller.cpp
src/pillar_detector_pkg/launch/: pillar_detector.launch.py
src/rknn_yolo_detector_pkg/: README.md  setup.cfg  setup.py
src/rknn_yolo_detector_pkg/launch/: rknn_yolo_detector.launch.py
src/rknn_yolo_detector_pkg/rknn_yolo_detector_pkg/: rknn_yolo_detector_node.py  runtime_metrics.py
src/rknn_yolo_detector_pkg/test/: test_runtime_metrics.py
src/uart_to_stm32/: CMakeLists.txt  package.xml
src/uart_to_stm32/include/uart_to_stm32/: uart_to_stm32.hpp
src/uart_to_stm32/launch/: uart_to_stm32.launch.py
src/uart_to_stm32/src/: uart_to_stm32.cpp
src/visual_pkg/: package.xml
src/visual_pkg/launch/: camera_source.launch.py
src/visual_pkg/visual_pkg/: camera_source_node.py
uart_to_stm32/src/: uart_to_stm32.cpp
visual_pkg/: setup.cfg  setup.py
visual_pkg/launch/: camera_source.launch.py
visual_pkg/visual_pkg/: camera_source_node.py
题目/集训第三题/: ground_station(1).py  立体货架盘点无人机系统测评表.docx
